--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@
 
 # Visual Studio cache directory
 .vs/
-
+.vs\
 # Gradle cache directory
 .gradle/
 
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 /.vs/slnx.sqlite
+/.vs/HeroesReforged/v17/.wsuo
